Add padding around group's children.
Also highlight open groups in bright white.

--- a/src/Styles/DataCatalog.less
+++ b/src/Styles/DataCatalog.less
@@ -48,6 +48,16 @@
     color: #CCCCCC;
 }
 
+.data-catalog-group-contents {
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
+.data-catalog-opened-group {
+    color: #ffffff;
+    fill: #ffffff;
+}
+
 .data-catalog-indent0 {
 }
 
