--- a/src/Views/BrandBar.html
+++ b/src/Views/BrandBar.html
@@ -1,5 +1,14 @@
 <div class="brand-bar">
     <div class="brand-bar-main">
+        <div class="brand-bar-element">
+            <img data-bind="attr: { src: leftLogo }" height="52" />
+        </div>
+        <div class="brand-bar-element">
+            <div class="brand-bar-name" data-bind="html: name"></div>
+        </div>
+        <div class="brand-bar-element">
+            <img src="images/nicta.png" height="52" />
+        </div>
     </div>
     <div class="brand-bar-slant"></div>
 </div>
