--- a/src/Styles/SearchPanel.less
+++ b/src/Styles/SearchPanel.less
@@ -6,3 +6,22 @@
     top: 90px;
     height: 40px;
 }
+
+.search-panel-input {
+    width: 355px;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0);
+    border: 0;
+    text-align: center;
+    color: #999999;
+    font-style: italic;
+}
+
+.search-panel-search-button {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    right: 4px;
+    top: 4px;
+    fill: #ffffff;
+}
