--- a/src/Views/SearchPanel.html
+++ b/src/Views/SearchPanel.html
@@ -1,2 +1,6 @@
 <div class="search-panel">
+    <form data-bind="submit: search">
+        <input class="search-panel-input" placeholder="Search address, landmark, or data set" type="search" data-bind="value: searchText, valueUpdate: 'afterkeydown'" />
+        <div class="search-panel-search-button" data-bind="cesiumSvgPath: { path: svgSearch, width: 32, height: 32 }"></div>
+    </form>
 </div>
