Add panel open/close icons.

--- a/src/Styles/ExplorerPanel.less
+++ b/src/Styles/ExplorerPanel.less
@@ -66,3 +66,21 @@
 .explorer-panel-close {
     cursor: pointer;
 }
+
+.explorer-panel-close-icon {
+    position: relative;
+    width: 14px;
+    height: 14px;
+    fill: #cccccc;
+    left: 13px;
+    top: 13px;
+}
+
+.explorer-panel-open-icon {
+    position: relative;
+    width: 22px;
+    height: 16px;
+    fill: #cccccc;
+    left: 9px;
+    top: 12px;
+}
