Basic Now Viewing hookup.

--- a/src/main.less
+++ b/src/main.less
@@ -25,4 +25,5 @@
 @import "Styles/SearchPanel.less";
 
 // Tabs on the Explorer Panel
-@import "Styles/DataCatalog.less";
+@import "Styles/DataCatalogTab.less";
+@import "Styles/NowViewingTab.less";
