--- a/src/Views/NowViewingTab.html
+++ b/src/Views/NowViewingTab.html
@@ -1,1 +1,18 @@
-<div>This is the Now Viewing tab.</div>
+<div class="now-viewing">
+    <div class="now-viewing-toolbar">
+        <div class="now-viewing-clear-all">Clear All</div>
+    </div>
+
+    <div class="now-viewing-list" data-bind="foreach: nowViewing.items">
+        <div class="now-viewing-item-top-row">
+            <div class="now-viewing-item-icon-holder">
+                <div class="now-viewing-item-icon clickable" data-bind="click: toggleShown, cesiumSvgPath: { path: isShown ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'now-viewing-shown-item': isShown }"></div>
+            </div>
+            <div class="now-viewing-item-label clickable" data-bind="text: name, click: zoomTo, css { 'now-viewing-shown-item': isShown }"></div>
+            <div class="now-viewing-item-info">
+                <div class="now-viewing-info-icon clickable" data-bind="click: $root.showInfo.bind($root), cesiumSvgPath: { path: $root.svgInfo, width: 18, height: 18, 'fill-rule': 'evenodd' }"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
