Show a message when Now Viewing is empty.

--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -55,3 +55,11 @@
     padding-left: 16px;
     border-top: 1px solid @panel-border-color;
 }
+
+.now-viewing-no-items {
+    padding-left: 16px;
+    padding-top: 16px;
+    color: #ffffff;
+    font-weight: lighter;
+    border-top: 1px solid @panel-border-color;
+}
