--- a/src/Views/NowViewingTab.html
+++ b/src/Views/NowViewingTab.html
@@ -14,5 +14,11 @@
             </div>
         </div>
     </div>
+
+    <div class="now-viewing-list" data-bind="if: nowViewing.items.length === 0">
+        <div class="now-viewing-no-items">
+            Add data using the Data Catalogue tab.
+        </div>
+    </div>
 </div>
 
