Add legend/opacity to Now Viewing tab.

--- a/src/Styles/Core.less
+++ b/src/Styles/Core.less
@@ -20,3 +20,12 @@
 .clickable {
     cursor: pointer;
 }
+
+a {
+    text-decoration: none;
+    color: @highlight-color;
+}
+
+a:hover {
+    text-decoration: underline;
+}
