--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -63,3 +63,39 @@
     font-weight: lighter;
     border-top: 1px solid @panel-border-color;
 }
+
+.now-viewing-item-arrow-holder {
+    display: table-cell;
+    width: 20px;
+}
+
+.now-viewing-item-arrow {
+    position: relative;
+    width: 15px;
+    height: 15px;
+    fill: #CCCCCC;
+}
+
+.now-viewing-legend-text {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.now-viewing-legend-image {
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.now-viewing-item-opacity {
+    padding-left: 20px;
+    color: #ffffff;
+}
+
+.now-viewing-opacity-slider {
+    display: block;
+}
