Improve appearance of credits.

--- a/src/Styles/Map.less
+++ b/src/Styles/Map.less
@@ -1,1 +1,25 @@
 @import url("../build/Cesium/Widgets/widgets.css");
+
+#cesiumContainer .cesium-widget-credits {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: #ffffff;
+    font-size: 9px;
+    text-shadow: 0px 0px 1px #000000;
+    padding: 5px;
+    font-family: "Open Sans", sans-serif;
+}
+
+#cesiumContainer .cesium-credit-imageContainer {
+    display: none;
+}
+
+.cesium-credit-text:first-child {
+    font-weight: bolder;
+}
+
+.cesium-credit-text:nth-child(3) {
+    font-weight: bolder;
+}
