--- a/src/Styles/Map.less
+++ b/src/Styles/Map.less
@@ -9,7 +9,7 @@
     font-size: 9px;
     text-shadow: 0px 0px 1px #000000;
     padding: 5px;
-    font-family: "Open Sans", sans-serif;
+    font-family: @default-font;
 }
 
 #cesiumContainer .cesium-credit-imageContainer {
