--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -46,6 +46,10 @@
     margin-right: 16px;
 }
 
+.now-viewing-toolbar {
+    height: 40px;
+}
+
 .now-viewing-clear-all {
     background-color: darken(@panel-background-color, 10%);
     font-style: italic;
@@ -54,6 +58,15 @@
     line-height: 38px;
     padding-left: 16px;
     border-top: 1px solid @panel-border-color;
+}
+
+.now-viewing-list {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 40px;
+    bottom: 0;
+    overflow: auto;
 }
 
 .now-viewing-no-items {
