--- a/src/Views/NowViewingTab.html
+++ b/src/Views/NowViewingTab.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="now-viewing-list" data-bind="if: nowViewing.items.length === 0">
+    <div class="now-viewing-list" data-bind="visible: nowViewing.items.length === 0">
         <div class="now-viewing-no-items">
             Add data using the Data Catalogue tab.
         </div>
