Tweak Now Viewing interactions.

--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -87,6 +87,7 @@
     width: 15px;
     height: 15px;
     fill: #CCCCCC;
+    margin-right: 16px;
 }
 
 .now-viewing-legend-text {
@@ -111,4 +112,14 @@
 
 .now-viewing-opacity-slider {
     display: block;
+}
+
+.now-viewing-action-menu {
+    padding-left: 20px;
+    color: @highlight-color;
+}
+
+.now-viewing-action {
+    display: inline-block;
+    padding: 10px;
 }
