--- a/src/Views/NowViewingTab.html
+++ b/src/Views/NowViewingTab.html
@@ -8,17 +8,18 @@
             <div class="now-viewing-item-icon-holder">
                 <div class="now-viewing-item-icon clickable" data-bind="click: toggleShown, cesiumSvgPath: { path: isShown ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'now-viewing-shown-item': isShown }"></div>
             </div>
-            <div class="now-viewing-item-label clickable" data-bind="text: name, click: zoomTo, css { 'now-viewing-shown-item': isShown }"></div>
+            <div class="now-viewing-item-label clickable" data-bind="text: name, click: toggleLegendVisible, css { 'now-viewing-shown-item': isShown }"></div>
 
             <div class="now-viewing-item-arrow-holder">
                 <div class="now-viewing-item-arrow" data-bind="click: toggleLegendVisible, cesiumSvgPath: { path: isLegendVisible ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
             </div>
-
-            <div class="now-viewing-item-info">
-                <div class="now-viewing-info-icon clickable" data-bind="click: $root.showInfo.bind($root), cesiumSvgPath: { path: $root.svgInfo, width: 18, height: 18, 'fill-rule': 'evenodd' }"></div>
-            </div>
         </div>
         <div class="now-viewing-item-details" data-bind="visible: isLegendVisible">
+            <div class="now-viewing-action-menu">
+                <div class="now-viewing-action clickable" data-bind="click: zoomTo">Zoom To</div>
+                <div class="now-viewing-action clickable" data-bind="click: $root.showInfo.bind($root)">Info</div>
+            </div>
+
             <!-- ko if: legendIsImage -->
             <img class="now-viewing-legend-image" data-bind="attr: { src: legendUrl }" />
             <!-- /ko -->
