Add Remove button to Now Viewing panel.

--- a/src/Views/NowViewingTab.html
+++ b/src/Views/NowViewingTab.html
@@ -18,6 +18,7 @@
             <div class="now-viewing-action-menu">
                 <div class="now-viewing-action clickable" data-bind="click: zoomTo">Zoom To</div>
                 <div class="now-viewing-action clickable" data-bind="click: $root.showInfo.bind($root)">Info</div>
+                <div class="now-viewing-action clickable" data-bind="click: toggleEnabled">Remove</div>
             </div>
 
             <!-- ko if: legendIsImage -->
