--- a/src/main.less
+++ b/src/main.less
@@ -22,6 +22,7 @@
 // Individual widgets
 @import "Styles/BrandBar.less";
 @import "Styles/ExplorerPanel.less";
+@import "Styles/MenuBar.less";
 @import "Styles/SearchPanel.less";
 
 // Tabs on the Explorer Panel
