--- a/src/main.less
+++ b/src/main.less
@@ -21,6 +21,7 @@
 
 // Individual widgets
 @import "Styles/BrandBar.less";
+@import "Styles/DistanceLegend.less";
 @import "Styles/ExplorerPanel.less";
 @import "Styles/LocationBar.less";
 @import "Styles/MenuBar.less";
