Add Navigation controls.

--- a/src/main.less
+++ b/src/main.less
@@ -25,6 +25,7 @@
 @import "Styles/ExplorerPanel.less";
 @import "Styles/LocationBar.less";
 @import "Styles/MenuBar.less";
+@import "Styles/Navigation.less";
 @import "Styles/SearchPanel.less";
 
 // Tabs on the Explorer Panel
