Hook up catalog item info panel.
It's still using the old styling.

--- a/src/main.less
+++ b/src/main.less
@@ -21,6 +21,7 @@
 
 // Individual widgets
 @import "Styles/BrandBar.less";
+@import "Styles/CatalogItemInfo.less";
 @import "Styles/DistanceLegend.less";
 @import "Styles/ExplorerPanel.less";
 @import "Styles/LocationBar.less";
