Now Viewing tweaks.
Put Opacity above the legend, and make labels white even when shown.

--- a/src/Styles/NowViewingTab.less
+++ b/src/Styles/NowViewingTab.less
@@ -27,8 +27,6 @@
 }
 
 .now-viewing-shown-item {
-    color: @highlight-color;
-    fill: @highlight-color;
 }
 
 .now-viewing-item-info {
@@ -107,6 +105,8 @@
 
 .now-viewing-item-opacity {
     padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: #ffffff;
 }
 
