Add popup messages.

--- a/src/Styles/CatalogItemInfo.less
+++ b/src/Styles/CatalogItemInfo.less
@@ -1,26 +1,7 @@
-.catalog-item-info-container {
-    .opaque-to-input;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.8);
-    z-index: 1000; /* required for IE9 */
-}
-
 .catalog-item-info {
-    display: inline-block;
-    width: 80%;
+    .modal;
+    width: 800px;
     height: 520px;
-    background-color: white;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    font-family: "Open Sans", sans-serif;
 }
 
 .catalog-item-info-translucencySlider {
@@ -36,6 +17,7 @@
 .catalog-item-info-table {
     background-color: #E3E3E3;
     padding: 5px;
+    color: #000000;
 }
 
 .catalog-item-info-header {
@@ -84,6 +66,7 @@
 .catalog-item-info-description {
     font-size: 10pt;
     font-weight: normal;
+    color: #cccccc;
 }
 
 .catalog-item-info-field {
