--- a/src/Views/CatalogItemInfo.html
+++ b/src/Views/CatalogItemInfo.html
@@ -31,7 +31,7 @@
     <!-- /ko -->
 </script>
 
-<div class="catalog-item-info-container" data-bind="click: closeIfClickOnBackground">
+<div class="modal-background" data-bind="click: closeIfClickOnBackground">
     <div class="catalog-item-info" data-bind="css : { loadingIndicator : catalogItem.metadata.isLoading }">
         <div class="catalog-item-info-header">
             <div class="catalog-item-info-close-button" data-bind="click: close">&times;</div>
