--- a/src/main.less
+++ b/src/main.less
@@ -14,6 +14,9 @@
 @explorer-active-tab-color: @highlight-color;
 @explorer-inactive-tab-color: #666666;
 
+// Modal panels
+@modal-panel-color: #2F353C;
+
 @import "Styles/Reset.less";
 @import "Styles/Core.less";
 @import "Styles/Panels.less";
@@ -27,6 +30,7 @@
 @import "Styles/LocationBar.less";
 @import "Styles/MenuBar.less";
 @import "Styles/Navigation.less";
+@import "Styles/PopupMessage.less";
 @import "Styles/SearchPanel.less";
 
 // Tabs on the Explorer Panel
