--- a/src/Styles/Core.less
+++ b/src/Styles/Core.less
@@ -1,3 +1,18 @@
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    background: #000;
+    font-size: 16px;
+    font-family: @default-font;
+}
+
 .full-window {
     position: absolute;
     top: 0;
@@ -28,4 +43,29 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+.modal-background {
+    .opaque-to-input;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 1000; /* required for IE9 */
+}
+
+.modal {
+    position: absolute;
+    margin: auto;
+    background-color: @modal-panel-color;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    max-height: 100%;
+    max-width: 100%;
+    font-family: @default-font;
+    color: #ffffff;
 }
