Displace map instead of overlaying it.

--- a/src/Styles/BrandBar.less
+++ b/src/Styles/BrandBar.less
@@ -1,21 +1,19 @@
 .brand-bar {
+    .opaque-to-input;
     position: absolute;
     left: 0;
     top: 0;
-    width: @brand-bar-width + 34px;
-    height: 68px;
-}
-
-.brand-bar-body {
-    .opaque-to-input;
+    width: @brand-bar-width;
+    height: 118px;
     background-color: @brand-bar-background-color;
     opacity: @brand-bar-opacity;
+    border-bottom: 1px solid #282828;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.26);
 }
 
 .brand-bar-main {
-    &:extend(.brand-bar-body);
     position: absolute;
-    width: @brand-bar-width - 10px;
+    width: @brand-bar-width;
     height: 68px;
     top: 0;
     left: 0;
@@ -26,6 +24,7 @@
 
 .brand-bar-slant {
     &:extend(.brand-bar-body);
+    display: none;
     position: absolute;
     left: @brand-bar-width;
     top: 0;
@@ -57,4 +56,28 @@
 
 .brand-bar-name small {
     font-weight: lighter;
+}
+
+.brand-bar-show-hide-explorer-panel {
+    position: absolute;
+    left: 16px;
+    top: 68px;
+    width: 40px;
+    height: 40px;
+    border: 1px solid @panel-border-color;
+}
+
+.brand-bar-menu-icon {
+    position: relative;
+    width: 14px;
+    height: 14px;
+    fill: #cccccc;
+    left: 13px;
+    top: 13px;
+
+}
+
+.brand-bar-menu-icon-highlighted {
+    fill: #ffffff;
+    background-color: #284D52;
 }
