--- a/src/Styles/SearchPanel.less
+++ b/src/Styles/SearchPanel.less
@@ -1,14 +1,16 @@
 .search-panel {
-    .panel;
     position: absolute;
-    left: 10px;
-    width: 395px;
-    top: 90px;
+    left: 66px;
+    width: 311px;
+    top: 68px;
     height: 40px;
+    border: 1px solid @panel-border-color;
 }
 
 .search-panel-input {
-    width: 355px;
+    position: absolute;
+    left: 0;
+    width: 315px;
     height: 40px;
     background-color: rgba(0, 0, 0, 0);
     border: 0;
