--- a/src/Views/BrandBar.html
+++ b/src/Views/BrandBar.html
@@ -11,4 +11,7 @@
         </div>
     </div>
     <div class="brand-bar-slant"></div>
+    <div class="brand-bar-show-hide-explorer-panel clickable" data-bind="css: { 'brand-bar-menu-icon-highlighted': explorerPanelIsOpen }, click: toggleExplorerPanelOpen">
+        <div class="brand-bar-menu-icon" data-bind="cesiumSvgPath: { path: svgMenu, width: 22, height: 16 }, css: { 'brand-bar-menu-icon-highlighted': explorerPanelIsOpen }"></div>
+    </div>
 </div>
