--- a/src/main.less
+++ b/src/main.less
@@ -4,10 +4,11 @@
 // Brand bar
 @brand-bar-background-color: #282D32;
 @brand-bar-opacity: 1.0;
-@brand-bar-width: 276px; // not counting the diagonal portion
+@brand-bar-width: 395px; // not counting the diagonal portion
 
 // Panels
-@panel-background-color: #2F353C;
+@panel-background-color: #282D32;
+@panel-opacity: 1.0;
 @panel-border-color: #979797;
 
 // Explorer panel options
