--- a/src/Styles/Core.less
+++ b/src/Styles/Core.less
@@ -17,8 +17,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    right: 0;
+    bottom: 0;
     margin: 0;
     overflow: hidden;
     padding: 0;
