--- a/src/Styles/Panels.less
+++ b/src/Styles/Panels.less
@@ -1,7 +1,8 @@
 .panel {
     .opaque-to-input;
     background-color: @panel-background-color;
-    border: 1px solid @panel-border-color;
+    //border: 1px solid @panel-border-color;
     font-family: @default-font;
-    opacity: 0.98;
+    opacity: @panel-opacity;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.26);
 }
