--- a/src/main.less
+++ b/src/main.less
@@ -4,7 +4,7 @@
 // Brand bar
 @brand-bar-background-color: #282D32;
 @brand-bar-opacity: 1.0;
-@brand-bar-width: 395px; // not counting the diagonal portion
+@brand-bar-width: 350px; // not counting the diagonal portion
 
 // Panels
 @panel-background-color: #282D32;
@@ -12,6 +12,7 @@
 @panel-border-color: #979797;
 
 // Explorer panel options
+@explorer-panel-width: @brand-bar-width;
 @explorer-active-tab-color: @highlight-color;
 @explorer-inactive-tab-color: #666666;
 
