--- a/src/Styles/SearchPanel.less
+++ b/src/Styles/SearchPanel.less
@@ -1,22 +1,26 @@
+@search-panel-border-width: 1px;
+@search-panel-width: @explorer-panel-width - 40px - 16px - 16px - 10px - @search-panel-border-width - @search-panel-border-width;
+
 .search-panel {
     position: absolute;
     left: 66px;
-    width: 311px;
+    width: @search-panel-width;
     top: 68px;
     height: 40px;
-    border: 1px solid @panel-border-color;
+    border: @search-panel-border-width solid @panel-border-color;
 }
 
 .search-panel-input {
     position: absolute;
     left: 0;
-    width: 315px;
+    width: @search-panel-width;
     height: 40px;
     background-color: rgba(0, 0, 0, 0);
     border: 0;
     text-align: center;
     color: #999999;
     font-style: italic;
+    font-size: 12px;
 }
 
 .search-panel-search-button {
