Animate map resize on show/hide explorer panel.

--- a/src/Styles/Core.less
+++ b/src/Styles/Core.less
@@ -22,6 +22,12 @@ body {
     margin: 0;
     overflow: hidden;
     padding: 0;
+
+    -webkit-transition: left 0.25s;
+    -moz-transition: left 0.25s;
+    -ms-transition: left 0.25s;
+    -o-transition: left 0.25s;
+    transition: left 0.25s;
 }
 
 .transparent-to-input {
