--- a/src/Styles/Map.less
+++ b/src/Styles/Map.less
@@ -26,4 +26,10 @@
 
 .map-displaced {
     left: @explorer-panel-width;
+
+    -webkit-transition: left 0.25s;
+    -moz-transition: left 0.25s;
+    -ms-transition: left 0.25s;
+    -o-transition: left 0.25s;
+    transition: left 0.25s;
 }
