--- a/src/Styles/ExplorerPanel.less
+++ b/src/Styles/ExplorerPanel.less
@@ -6,21 +6,21 @@
     top: 119px;
     bottom: 0;
 
-    -webkit-transition: left 0.25s;
-    -moz-transition: left 0.25s;
-    -ms-transition: left 0.25s;
-    -o-transition: left 0.25s;
-    transition: left 0.25s;
+    -webkit-transition: left 0.25s ease-out;
+    -moz-transition: left 0.25s ease-out;
+    -ms-transition: left 0.25s ease-out;
+    -o-transition: left 0.25s ease-out;
+    transition: left 0.25s ease-out;
 }
 
 .explorer-panel-collapsed {
     left: -@explorer-panel-width;
 
-    -webkit-transition: left 0.25s;
-    -moz-transition: left 0.25s;
-    -ms-transition: left 0.25s;
-    -o-transition: left 0.25s;
-    transition: left 0.25s;
+    -webkit-transition: left 0.25s ease-out;
+    -moz-transition: left 0.25s ease-out;
+    -ms-transition: left 0.25s ease-out;
+    -o-transition: left 0.25s ease-out;
+    transition: left 0.25s ease-out;
 }
 
 .explorer-panel-close {
