--- a/src/Styles/Panels.less
+++ b/src/Styles/Panels.less
@@ -1,8 +1,8 @@
 .panel {
     .opaque-to-input;
-    background-color: @panel-background-color;
+    //background-color: @panel-background-color;
     //border: 1px solid @panel-border-color;
     font-family: @default-font;
     opacity: @panel-opacity;
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.26);
+    //box-shadow: 2px 2px 5px rgba(0,0,0,0.26);
 }
