--- a/src/main.less
+++ b/src/main.less
@@ -15,6 +15,7 @@
 @explorer-panel-width: @brand-bar-width;
 @explorer-active-tab-color: @highlight-color;
 @explorer-inactive-tab-color: #666666;
+@explorer-panel-close-animation-length: 0.5s;
 
 // Modal panels
 @modal-panel-color: #2F353C;
