--- a/src/Views/ExplorerPanel.html
+++ b/src/Views/ExplorerPanel.html
@@ -3,17 +3,22 @@
         <div class="explorer-panel-close-icon clickable" data-bind="visible: isOpen, cesiumSvgPath: { path: svgClose, width: 14, height: 14 }"></div>
         <div class="explorer-panel-open-icon clickable" data-bind="visible: !isOpen, cesiumSvgPath: { path: svgMenu, width: 22, height: 16 }"></div>
     </div>
-    <div class="explorer-panel-tab-area" data-bind="foreach: tabs">
-        <div class="explorer-panel-tab"
-            data-bind="text: name,
-                       visible: isVisible,
-                       style: { width: $root.tabWidth },
-                       css: { 'explorer-panel-tab-active': isActive },
-                       click: activate">
+    <div class="explorer-panel-header"> 
+        <div class="explorer-panel-tab-area" data-bind="foreach: tabs">
+          <div class="explorer-panel-tab"
+              data-bind="text: name,
+                         visible: isVisible,
+                         style: { width: $root.tabWidth },
+                         css: { 'explorer-panel-tab-active': isActive },
+                         click: activate">
+          </div>
+        </div>
+        <div class="explorer-panel-collapse-button clickable" data-bind="click: toggleOpen">
+            <div class="explorer-panel-collapse-button-icon" data-bind="cesiumSvgPath: { path: svgCollapse, width: 6, height: 9 }, css: { 'brand-bar-menu-icon-highlighted': isOpen }"></div>
         </div>
     </div>
     <div data-bind="isOpen, foreach: tabs">
-      <div class="explorer-panel-body" data-bind="visible: isActive, embeddedComponent: $data">
-      </div>
+        <div class="explorer-panel-body" data-bind="visible: isActive, embeddedComponent: $data">
+        </div>
     </div>
 </div>
