Tweak close button opacity transition.

--- a/src/Styles/ExplorerPanel.less
+++ b/src/Styles/ExplorerPanel.less
@@ -129,11 +129,11 @@
     width: 40px;
     height: 40px;
 
-    -webkit-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out @explorer-panel-close-animation-length*3/4;
-    -moz-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out @explorer-panel-close-animation-length*3/4;
-    -ms-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out @explorer-panel-close-animation-length*3/4;
-    -o-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out @explorer-panel-close-animation-length*3/4;
-    transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out @explorer-panel-close-animation-length*3/4;
+    -webkit-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 @explorer-panel-close-animation-length*3/4;
+    -moz-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 @explorer-panel-close-animation-length*3/4;
+    -ms-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 @explorer-panel-close-animation-length*3/4;
+    -o-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 @explorer-panel-close-animation-length*3/4;
+    transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 @explorer-panel-close-animation-length*3/4;
 }
 
 .explorer-panel-collapse-button-icon {
@@ -150,9 +150,9 @@
     left: -44px;
     opacity: 0.0;
 
-    -webkit-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out;
-    -moz-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out;
-    -ms-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out;
-    -o-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out;
-    transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4 ease-out;
+    -webkit-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4;
+    -moz-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4;
+    -ms-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4;
+    -o-transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4;
+    transition: left @explorer-panel-close-animation-length ease-out, opacity @explorer-panel-close-animation-length/4;
 }
