Fix transition when switching tabs while panel closed.

--- a/src/Styles/Core.less
+++ b/src/Styles/Core.less
@@ -23,11 +23,11 @@ body {
     overflow: hidden;
     padding: 0;
 
-    -webkit-transition: left 0.25s ease-out;
-    -moz-transition: left 0.25s ease-out;
-    -ms-transition: left 0.25s ease-out;
-    -o-transition: left 0.25s ease-out;
-    transition: left 0.25s ease-out;
+    -webkit-transition: left @explorer-panel-close-animation-length ease-out;
+    -moz-transition: left @explorer-panel-close-animation-length ease-out;
+    -ms-transition: left @explorer-panel-close-animation-length ease-out;
+    -o-transition: left @explorer-panel-close-animation-length ease-out;
+    transition: left @explorer-panel-close-animation-length ease-out;
 }
 
 .transparent-to-input {
