--- a/src/Styles/ExplorerPanel.less
+++ b/src/Styles/ExplorerPanel.less
@@ -90,7 +90,7 @@
     transition: left @explorer-panel-close-animation-length ease-out;
 }
 
-.explorer-panel-collapsed .explorer-panel-body {
+.explorer-panel-body-collapsed {
     left: -@explorer-panel-width;
 
     -webkit-transition: left @explorer-panel-close-animation-length ease-out;
